--- a/management-report/markdown/subpage-pathways.Rmd
+++ b/management-report/markdown/subpage-pathways.Rmd
@@ -386,7 +386,7 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {.tabset data-height=760}
+Row {.tabset data-height=780}
 ----------------------------------------------------------------------
 
 ### **Standard Met**
@@ -401,7 +401,7 @@ mutate(`% Standard Met without termination date` = if_else(total == 0, "-",
   paste0(round(100*`Without termination date`/total,1), "%")), .after = `Without termination date`) %>% 
   select(-`PDS ended`, -`Without termination date`)
 
-met_data_totals <- left_join(pds_all_totals, met_data) %>% 
+met_data_totals <- left_join(pds_all_totals %>% filter(fy %in% full_years), met_data) %>% 
   rename(`Health Board/Integration Authority Area` = geog, 
          `Total number of individuals referred to PDS` = total_referrals,
          `Standard Met` = total) %>% mutate(across(where(is.numeric), ~format(., big.mark = ","))) 
