--- a/management-report/markdown/subpage-additional-analysis.Rmd
+++ b/management-report/markdown/subpage-additional-analysis.Rmd
@@ -132,7 +132,7 @@ if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years
 <!-- delete all of above when finished testing -->
 
 
-```{r data setup-additional, include=FALSE}
+```{r data-setup-additional, include=FALSE}
 #prepare subtype of dementia data
 subtype_data <- read_rds(get_mi_data_path("subtype_data", ext = "rds", test_output = test_output))
 
@@ -494,7 +494,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-subtype-legend}
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend_1(legend_data)),NULL
 )
 
 ```
@@ -806,7 +806,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-stage-legend}
 bscols(widths = 12,
 div(style=css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend_1(legend_data)),NULL
 )
 
 ```
@@ -1583,7 +1583,7 @@ bscols(widths = c(1,5,NA),
 ```{r plot-ldp-model-legend}
 bscols(widths = 12,
 div(style=css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend_1(legend_data)),NULL
 )
 
 ```
